k8s/banana-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana-container
        image: surajmane121045/ingress_app_two:bcb7002d6ebb6856b15b77502223b92b8b368cee
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
